--- a/modules/configs/templates/replicated/replicated.conf
+++ b/modules/configs/templates/replicated/replicated.conf
@@ -8,6 +8,9 @@
     "BypassPreflightChecks":             true,
     "ImportSettingsFrom":                "/etc/replicated-ptfe.conf",
     "LicenseFileLocation":               "/etc/replicated.rli",
+%{ if release_sequence != "latest" ~}
+    "ReleaseSequence":                   "${release_sequence}"
+%{ endif ~}
 %{ if installation_mode == "es" ~}
 %{ if airgap == "True" ~}
 %{ else ~}
