--- a/modules/configs/templates/cloud-init/cloud-config.yaml
+++ b/modules/configs/templates/cloud-init/cloud-config.yaml
@@ -45,7 +45,7 @@ write_files:
 - path: /etc/ptfe/custom-ca-cert-url
   owner: root:root
   permissions: "0400"
-  content: "${ca_cert_url}"
+  content: "${ca_bundle_url}"
 
 %{~ if role != "secondary" ~}
 - path: /etc/ptfe/setup-token
