--- a/modules/configs/templates/cloud-init/cloud-config.yaml
+++ b/modules/configs/templates/cloud-init/cloud-config.yaml
@@ -41,13 +41,13 @@ write_files:
   owner: root:root
   permissions: "0400"
   content: "${proxy_url}"
-%{ if ca_cert_url != "" ~}
+%{~ if ca_cert_url != "" }
 - path: /etc/ptfe/custom-ca-cert-url
   owner: root:root
   permissions: "0400"
   content: "${ca_cert_url}"
-%{~ endif ~}
-%{~ if role != "secondary" ~}
+%{~ endif }
+%{~ if role != "secondary" }
 - path: /etc/ptfe/setup-token
   owner: root:root
   permissions: "0400"
@@ -95,7 +95,6 @@ write_files:
   owner: root:root
   permissions: "0444"
   content: ${cert_thumbprint}
-
 
 %{~ if airgap_package_url != "" }
 - path: /etc/ptfe/airgap-package-url
