fix for integrating ca bundle

--- a/modules/configs/templates/cloud-init/cloud-config.yaml
+++ b/modules/configs/templates/cloud-init/cloud-config.yaml
@@ -41,7 +41,7 @@ write_files:
   owner: root:root
   permissions: "0400"
   content: "${proxy_url}"
-%{~ if ca_cert_url != "" }
+%{~ if ca_bundle_url != "" }
 - path: /etc/ptfe/custom-ca-cert-url
   owner: root:root
   permissions: "0400"
