--- a/modules/configs/templates/replicated/replicated-ptfe.conf
+++ b/modules/configs/templates/replicated/replicated-ptfe.conf
@@ -8,7 +8,7 @@
     },
      "enc_password": {
      "value": "${enc_password}"
-%{ else }
+%{ else ~}
     },
     "installation_type": {
         "value": "production"
@@ -43,7 +43,7 @@
     "azure_container": {
         "value": "${azure_container}"
 
-%{ endif }
+%{ endif ~}
     },
     "iact_subnet_list": {
         "value": "${iact_subnet_list}"
