--- a/modules/configs/templates/cloud-init/cloud-config.yaml
+++ b/modules/configs/templates/cloud-init/cloud-config.yaml
@@ -2,8 +2,7 @@
 %{ if import_key != "" ~}
 ssh_import_id:
 - "${import_key}"
-%{ endif ~}
-
+%{ endif }
 write_files:
 
 - path: /etc/ptfe/role
@@ -29,7 +28,17 @@ write_files:
 - path: /etc/ptfe/health-url
   owner: root:root
   permissions: "0400"
-  content: "${health_url}"
+  content: "${assistant_host}/healthz"
+
+- path: /etc/ptfe/assistant-host
+  owner: root:root
+  permissions: "0400"
+  content: "${assistant_host}"
+
+- path: /etc/ptfe/assistant-token
+  owner: root:root
+  permissions: "0400"
+  content: "${setup_token}"
 
 - path: /var/lib/cloud/scripts/per-once/install-ptfe.sh
   owner: root:root
@@ -42,12 +51,13 @@ write_files:
   permissions: "0400"
   content: "${proxy_url}"
 
+%{ if ca_bundle_url != "" }
 - path: /etc/ptfe/custom-ca-cert-url
   owner: root:root
   permissions: "0400"
   content: "${ca_bundle_url}"
-
-%{~ if role != "secondary" ~}
+%{ endif ~}
+%{ if role != "secondary" }
 - path: /etc/ptfe/setup-token
   owner: root:root
   permissions: "0400"
@@ -56,7 +66,7 @@ write_files:
 - path: /etc/ptfe/primary-pki-url
   owner: root:root
   permissions: "0400"
-  content: "${primary_pki_url}"
+  content: "${assistant_host}/api/v1/pki-download?token=${setup_token}"
 
 - path: /etc/ptfe/role-id
   owner: root:root
@@ -68,10 +78,8 @@ write_files:
   permissions: "0755"
   encoding: b64
   content: ${proxy_b64}
-
-%{~ endif ~}
-
-%{~ if role == "main" ~}
+%{ endif ~}
+%{ if role == "main" }
 - path: /etc/replicated.rli
   owner: root:root
   permissions: "0444"
@@ -95,9 +103,7 @@ write_files:
   owner: root:root
   permissions: "0444"
   content: ${cert_thumbprint}
-
-
-%{~ if airgap_package_url != "" }
+%{ if airgap_package_url != "" }
 - path: /etc/ptfe/airgap-package-url
   owner: root:root
   permissions: "0644"
@@ -108,32 +114,27 @@ write_files:
   permissions: "0644"
   content: ${airgap_installer_url}
 %{ endif ~}
-
 %{ if weave_cidr != "" }
 - path: /etc/ptfe/weave-cidr
   owner: root:root
   permissions: "0644"
   content: ${weave_cidr}
-%{ endif }
-
+%{ endif ~}
 %{ if repl_cidr != "" }
 - path: /etc/ptfe/repl-cidr
   owner: root:root
   permissions: "0644"
   content: ${repl_cidr}
-%{ endif }
+  %{ endif }
 %{ endif ~}
-
-%{ if role == "secondary" ~}
+%{ if role == "secondary" }
 - path: /etc/apt/apt.conf.d/00aaa_proxy
   owner: root:root
   permissions: "0400"
   encoding: b64
   content: ${aaa_proxy_b64}
-
 %{ endif ~}
-
-%{ if distro == "ubuntu" ~}
+%{ if distro == "ubuntu" }
 - path: /etc/apt/apt.conf.d/00_aaa_proxy.conf
   owner: root:root
   permissions: "0400"
@@ -147,4 +148,3 @@ packages:
 - unzip
 - wget
 %{ endif ~}
-
