test using gh action

--- a/.github/workflows/docgen.yml
+++ b/.github/workflows/docgen.yml
@@ -16,3 +16,5 @@ jobs:
       run: make docs
     - name: Push docs to PR
       run: make push-docs
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
