--- a/modules/configs/templates/cloud-init/cloud-config.yaml
+++ b/modules/configs/templates/cloud-init/cloud-config.yaml
@@ -78,6 +78,17 @@ write_files:
   permissions: "0755"
   encoding: b64
   content: ${proxy_b64}
+
+%{ if repl_cidr != "" }
+- path: /etc/profile.d/proxy.sh
+  owner: root:root
+  permissions: "0755"
+  content: |
+    export http_proxy="${proxy_url}"
+    export https_proxy="${proxy_url}"
+    export no_proxy=10.0.0.0/8,127.0.0.1,169.254.169.254,${repl_cidr}
+%{ endif }
+  
 %{ endif ~}
 %{ if role == "main" }
 - path: /etc/replicated.rli
