Add Azure Blob Storage endpoint variable

--- a/modules/configs/templates/replicated/replicated-ptfe.conf
+++ b/modules/configs/templates/replicated/replicated-ptfe.conf
@@ -42,6 +42,9 @@
     },
     "azure_container": {
         "value": "${azure_container}"
+    },
+    "azure_endpoint": {
+        "value": "${azure_endpoint}"
 
 %{ endif ~}
     },
