--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
           command: echo -e "license_file = \"~/fake.rli\"\nresource_group_name = \"fake-rg\"\nvirtual_network_name = \"fake-vnet\"\nsubnet = \"fake-subnet\"\nkey_vault_name = \"fake-kv\"\ndomain = \"example.com\"\ntls_pfx_certificate = \"~/temp.pfx\"\ntls_pfx_certificate_password = \"fake-password\"" > terraform.tfvars
       - run:
           name: create provider stub
-          command: echo -e "provider \"azurerm\" {}\n" > provider.tf
+          command: echo -e "provider \"azurerm\" {\nversion= \"=1.44.0\"\nfeatures {}\n}\n" > provider.tf
       - run:
           name: init configs and check if valid
           command: terraform init && terraform validate
