--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -91,7 +91,7 @@ jobs:
           HEALTH_CHECK_URL: ${{ steps.retrieve-health-check-url.outputs.stdout }}
         run: |
           echo "Curling \`health_check_url\` for a return status of 200..."
-          while ! curl -k -sfS --max-time 15 "$HEALTH_CHECK_URL"; do sleep 5; done
+          while ! curl -sfS --max-time 15 "$HEALTH_CHECK_URL"; do sleep 5; done
 
       - name: Retrieve TFE URL
         id: retrieve-tfe-url
@@ -111,7 +111,7 @@ jobs:
           IACT_URL: ${{ steps.retrieve-iact-url.outputs.stdout }}
         run: |
           echo "::set-output name=token::$( \
-            curl -k --fail --retry 5 --verbose "$IACT_URL" )"
+            curl --fail --retry 5 --verbose "$IACT_URL" )"
 
       - name: Retrieve Initial Admin User URL
         id: retrieve-initial-admin-user-url
@@ -130,7 +130,7 @@ jobs:
             '{"username": "test", "email": "tf-onprem-team@hashicorp.com", "password": "$TFE_PASSWORD"}' \
             > ./payload.json
           echo "::set-output name=response::$( \
-            curl -k \
+            curl \
             --fail \
             --retry 5 \
             --verbose \
