--- a/examples/standalone_airgap_dev/terraform.tfvars.example
+++ b/examples/standalone_airgap_dev/terraform.tfvars.example
@@ -1,8 +1,14 @@
+license_file = "/full/path/to/my/tfe/license.rli"
+key_vault_id = "/subscriptions/*******-my-azure-sub-id-*****/resourceGroups/my-rg/providers/Microsoft.KeyVault/vaults/my-kv"
+airgap_url   = "https://an-accessible-place-to-get-my-airgap-bundle.com/v202201-1.airgap"
+
 domain_name             = "my.domain.com"
 location                = "Central US"
 resource_group_name_dns = "existing-dns-rg-name"
 iact_subnet_list        = ["0.0.0.0/0"] # careful, this is only for short-lived dev environments
-vm_image_id             = "/subscriptions/*******-my-azure-sub-id-*****/resourceGroups/my-rg/providers/Microsoft.Compute/galleries/my_image_gallery/images/airgapimage/versions/0.0.3"
+
+vm_certificate_secret_name = "my-certificate-pem"
+vm_key_secret_name         = "my-private-key-pem"
 
 tags = {
   Owner       = "Your Name"
