--- a/examples/standalone_mounted_disk/terraform.tfvars.example
+++ b/examples/standalone_mounted_disk/terraform.tfvars.example
@@ -1,8 +1,8 @@
-airgap_url=""
 domain_name=""
 iact_subnet_list=""
 key_vault_id=""
 license_file=""
+load_balancer_certificate_name=""
 location=""
 resource_group_name_dns=""
 tags=""
