--- a/examples/existing-network/terraform.tfvars.example
+++ b/examples/existing-network/terraform.tfvars.example
@@ -3,7 +3,7 @@ iact_subnet_list                     = ["0.0.0.0/0"] # careful, this is only for
 key_vault_id                         = "/subscriptions/1a2s3d4f-1a2s-1q2w-4r5t6-1a2s3d4f/resourceGroups/my-rg/providers/Microsoft.KeyVault/vaults/key_vault_name"
 license_file                         = "/full/path/to/my/tfe/license.rli"
 load_balancer_certificate_name       = "key-vault-load-balancer-certificate-name"
-location                             = "East US"
+location                             = "region"
 network_bastion_subnet_id            = "/subscriptions/1a2s3d4f-1a2s-1q2w-4r5t6-1a2s3d4f/resourceGroups/enpc-rg/providers/Microsoft.Network/virtualNetworks/enpc-network/subnets/subnet_name"
 network_database_private_dns_zone_id = "/subscriptions/1a2s3d4f-1a2s-1q2w-4r5t6-1a2s3d4f/resourceGroups/enpc-rg/providers/Microsoft.Network/privateDnsZones/enpc.postgres.database.azure.com"
 network_database_subnet_id           = "/subscriptions/1a2s3d4f-1a2s-1q2w-4r5t6-1a2s3d4f/resourceGroups/enpc-rg/providers/Microsoft.Network/virtualNetworks/enpc-network/subnets/subnet_name"
