--- a/examples/standalone_airgap_dev/terraform.tfvars.example
+++ b/examples/standalone_airgap_dev/terraform.tfvars.example
@@ -8,7 +8,7 @@ location                  = "region"
 resource_group_name_dns   = "existing-dns-rg-name"
 tags                      = {
                              Owner       = "Your Name"
-                             Environment = "standalone-airgap"
+                             Environment = "standalone-airgap-dev"
                              Description = "Standalone, Mounted Disk, Airgapped scenario"
                              Repository  = "hashicorp/terraform-azurerm-terraform-enterprise"
                              Team        = "Your Team Name"
