--- a/examples/active-active-proxy/terraform.tfvars.example
+++ b/examples/active-active-proxy/terraform.tfvars.example
@@ -6,7 +6,7 @@ iact_subnet_list                     = ["0.0.0.0/0"] # careful, this is only for
 key_vault_id                         = "/subscriptions/1a2s3d4f-1a2s-1q2w-4r5t6-1a2s3d4f/resourceGroups/my-rg/providers/Microsoft.KeyVault/vaults/key_vault_name"
 license_file                         = "/full/path/to/my/tfe/license.rli"
 load_balancer_certificate_name       = "key-vault-load-balancer-certificate-name"
-location                             = "region"
+location                             = "East US"
 network_allow_range                  = "*" 
 proxy_public_ssh_key_secret_name     = "proxy-ssh-public-key"
 resource_group_name_dns              = "existing-dns-rg-name"
