add test case names

--- a/.github/workflows/handler-help.yml
+++ b/.github/workflows/handler-help.yml
@@ -24,4 +24,11 @@ jobs:
             > | /test <all\|test case name...> [destroy=false] | Run the Terraform test workflow on the modules in the tests/ directory. Unnamed arguments can be "all" to run all test cases or specific test case names to only run selected cases. The named argument "destroy=false" will disable the destruction of test infrastructure for debugging purposes. |
             > | /destroy <all\|test case name...> | Destroy any resources that may still be in Terraform state from previous tests. Unnamed arguments can be "all" to destroy all resources from all test cases or specific test case names to only destroy selected test case resources. |
             > | /help | Shows this help message |
+            
+            ## Test Case Names
+            
+            * private-active-active
+            * private-tcp-active-active
+            * public-active-active
+
           reaction-type: confused
