Adding gitignore entries for new testing artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 # terraform lock files
 .terraform.lock*
 
+# CI / Testing Intermediate Files
+.env.sh
+payload.json
+
 # Examples
 examples/*/*.tfstate
 examples/*/*.tfstate.*
