--- a/.github/workflows/create-jira-issue.yml
+++ b/.github/workflows/create-jira-issue.yml
@@ -9,5 +9,5 @@ on:
 
 jobs:
   create-jira-issue:
-    uses: hashicorp/tf-enterprise-workflows/.github/workflows/create-jira-issue.yml@vmain
+    uses: hashicorp/tf-enterprise-workflows/.github/workflows/create-jira-issue.yml@main
     secrets: inherit
