--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -46,7 +46,7 @@ jobs:
         persist-credentials: false
 
     - name: Setup Terraform Lint
-      uses: terraform-linters/setup-tflint@v1 # TSCCR: no entry for repository "terraform-linters/setup-tflint"
+      uses: terraform-linters/setup-tflint@ba6bb2989f94daf58a4cc6eac2c1ca7398a678bf # v3.0.0
       with:
         tflint_version: v0.26.0
 
