--- a/.github/workflows/handler-destroy.yml
+++ b/.github/workflows/handler-destroy.yml
@@ -15,7 +15,7 @@ jobs:
       cloud: Azure
       test_name: Public Active/Active
       utility_test: false
-      is_legacy_deployment: false
+      is_replicated_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -32,7 +32,7 @@ jobs:
       cloud: Azure
       test_name: Private Active/Active
       utility_test: false
-      is_legacy_deployment: false
+      is_replicated_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -49,7 +49,7 @@ jobs:
       cloud: Azure
       test_name: Private TCP Active/Active
       utility_test: false
-      is_legacy_deployment: false
+      is_replicated_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -66,7 +66,7 @@ jobs:
       cloud: Azure
       test_name: Standalone External
       utility_test: false
-      is_legacy_deployment: false
+      is_replicated_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -90,7 +90,7 @@ jobs:
       cloud: Azure
       test_name: Standalone Mounted Disk
       utility_test: false
-      is_legacy_deployment: false
+      is_replicated_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -114,7 +114,7 @@ jobs:
       cloud: Azure
       test_name: Public Active/Active (Legacy)
       utility_test: true
-      is_legacy_deployment: true
+      is_replicated_deployment: true
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -132,7 +132,7 @@ jobs:
       cloud: Azure
       test_name: Private Active/Active (Legacy)
       utility_test: true
-      is_legacy_deployment: true
+      is_replicated_deployment: true
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -150,7 +150,7 @@ jobs:
       cloud: Azure
       test_name: Private TCP Active/Active (Legacy)
       utility_test: true
-      is_legacy_deployment: true
+      is_replicated_deployment: true
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -168,7 +168,7 @@ jobs:
       cloud: Azure
       test_name: Standalone External (Legacy)
       utility_test: true
-      is_legacy_deployment: true
+      is_replicated_deployment: true
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -192,7 +192,7 @@ jobs:
       cloud: Azure
       test_name: Standalone Mounted Disk (Legacy)
       utility_test: true
-      is_legacy_deployment: true
+      is_replicated_deployment: true
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
